Make Blink support multiline text insertion

When inserting multiline text, Blink will insert the text before '\n' and the
text after the '\n' separately, e.g., for "hello\nworld", Blink will insert
"hello", then a paragraph separator, then "world".

However, after inserting "hello", the text is updated to "hello" incorrectly,
so the remaining "world" will not be inserted. This CL moves the
text-updating logic to upper level to make it right. Besides, this CL adjusts
the selection after each insertion for incremental insertion.

BUG=683885

Review-Url: https://codereview.chromium.org/2680733002
Cr-Commit-Position: refs/heads/master@{#448920}

Former-commit-id: 286c2ce88f848617aff81090e9cc41afdf5de7e5